fix mosaic list overflow (#722)

--- a/src/components/forms/transfer/Transfer.less
+++ b/src/components/forms/transfer/Transfer.less
@@ -296,9 +296,9 @@
 
   .mosaic_list_container {
     width: 560px;
-    height: 100px;
+    height: 200px;
     color: #999;
-    padding: 20px 10px 10px 10px;
+    padding: 5px ;
     margin-left: 110px;
     border: 1px solid #ccc;
 
@@ -341,7 +341,7 @@
   }
 
   .mosaic_list_item_container {
-    max-height: 120px;
+    max-height: 160px;
   }
 }
 
